uc-128:gumshoe;corrected button,was missaligned for npcs

--- a/Gumshoe by Roll20/GUMSHOE.css
+++ b/Gumshoe by Roll20/GUMSHOE.css
@@ -1387,6 +1387,10 @@ input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-co
 	width: 100%;
 }
 
+input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item.sheet-npc-ability button[type=roll] {
+	left:10px;
+}
+
 input.sheet-npc:checked ~ input.sheet-toc:checked ~ .sheet-master-container .sheet-section {
 	background: white;
 	min-height: 0;
@@ -1690,7 +1694,7 @@ input.sheet-nba:checked ~ .sheet-master-container .sheet-options input[type=text
 
 input.sheet-nba:checked ~ .sheet-master-container .sheet-display span {
 	font-size: 14px;
-	margin-left: 10px;
+	margin-left: 40px;
 	line-height: 25px;
 }
 /*----------- Abilities -----------*/
@@ -1796,6 +1800,7 @@ input.sheet-nba:checked ~ .sheet-master-container .sheet-abilities-item .sheet-r
 	padding-top: 0;
 	margin-top: -1px;
 }
+
 
 input.sheet-nba:checked ~ .sheet-master-container .sheet-abilities-item .sheet-rep-title .sheet-options-flag,
 input.sheet-nba:checked ~ .sheet-master-container .sheet-abilities-item .sheet-rep-title .sheet-options-flag + span {
